--- a/palworld-overall/app.html
+++ b/palworld-overall/app.html
@@ -5,7 +5,96 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Palworld Dark Mode Table</title>
 <link rel="icon" type="image/png" href="assets/palworld_icon.png" />
-<link rel="stylesheet" href="assets/styles.css">
+<style>
+  body {
+    background-color: #121212;
+    color: #e0e0e0;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 1rem;
+  }
+  h1 {
+    text-align: center;
+    margin-bottom: 0.5rem;
+  }
+  input[type="search"] {
+    width: 300px;
+    padding: 8px;
+    margin-bottom: 0;
+    font-size: 1rem;
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    appearance: textfield;
+    -moz-appearance: textfield; /* normalize Firefox search input look */
+  }
+  /* uniform small filter input used for attack/move/search */
+  .filter-input {
+    width: 120px;
+    padding: 6px;
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    font-size: 0.95rem;
+  }
+  table {
+    border-collapse: collapse;
+    width: 100%;
+    margin: 0 auto;
+    max-width: 1800px;  /* optional max width */
+  }
+  thead {
+    background-color: #1f1f1f;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+  }
+  th, td {
+    padding: 8px 12px;
+    border: 1px solid #333;
+    text-align: left;
+    font-size: 0.9rem;
+  }
+  th {
+    cursor: pointer;
+    user-select: none;
+    background-color: #272727;
+  }
+  th:hover { background-color: #3a3a3a; }
+  tbody tr:nth-child(even) { background-color: #1a1a1a; }
+  tbody tr:hover { background-color: #333; }
+  th.sort-asc::after { content: " ▲"; font-size: 0.7rem; }
+  th.sort-desc::after { content: " ▼"; font-size: 0.7rem; }
+
+  /* Responsive for mobile */
+  @media (max-width: 768px) {
+    table, thead, tbody, th, td, tr { display: block; }
+    thead tr { display: none; }
+    tbody tr { margin-bottom: 1rem; border: 1px solid #444; padding: 8px; }
+    tbody td {
+      border: none;
+      padding-left: 50%;
+      position: relative;
+      text-align: right;
+      font-size: 0.85rem;
+    }
+    tbody td::before {
+      position: absolute;
+      left: 8px;
+      width: 45%;
+      white-space: nowrap;
+      font-weight: bold;
+      text-align: left;
+      color: #aaa;
+      content: attr(data-label);
+    }
+  }
+  /* small bottom margin for the whole main section */
+  section#palSection {
+    margin-bottom: 24px;
+    padding-bottom: 18px; /* ensure visible space even when following content is positioned */
+  }
+</style>
 </head>
 <body>
 
