--- a/app.html
+++ b/app.html
@@ -238,136 +238,149 @@
 
     <section id="ultra-teams" class="tab-content">
       <h1>Ultra Teams Guide (2026 Meta)</h1>
-      <div class="info-content">
-        <p>
-          To defeat <strong>Bellanoir Libero Ultra</strong> in the 2026 meta
-          (v0.7 and beyond), you need to account for her massive HP pool (around
-          1.2 million) and her unique two-phase typing.
-        </p>
-        <p>
-          She starts as <strong>Dark</strong> type but transforms into
-          <strong>Ice</strong> type when she reaches her final HP threshold
-          (roughly the last 15–20%). This makes standard Dragon teams dangerous
-          because she will shred them in the final phase.
-        </p>
 
-        <h2>The "Ultra" Team Composition</h2>
-        <p>
-          Since raid bosses now target the player more aggressively, your party
-          should be built around
-          <strong>Player Damage Enhancement</strong> while your base Pals
-          provide the heavy lifting.
-        </p>
-
-        <h3>1. The Party (Your Personal Loadout)</h3>
-        <ul>
-          <li>
-            <strong>Mount 1 (Phase 1):</strong> Chillet / Chillet Ignis. Riding
-            Chillet converts your player damage to Dragon, which is super
-            effective against her Dark phase.
-          </li>
-          <li>
-            <strong>Mount 2 (Phase 2):</strong> Ragnahawk / Pyrin. When she
-            turns to Ice, switch to these to convert your damage to Fire.
-          </li>
-          <li>
-            <strong>Support:</strong> 4x Gobfin (fully condensed). Their "Angry
-            Shark" skill stacks, giving you a massive boost to your own attack
-            power.
-          </li>
-          <li>
-            <strong>Passives for Party:</strong> Aim for Vanguard and Stronghold
-            Strategist on every Gobfin and mount to buff your own stats.
-          </li>
-        </ul>
-
-        <h3>2. The Base Army (The 15–20 Pals at your Altar)</h3>
-        <p>
-          You need two distinct groups. Use the Palbox to swap them quickly when
-          the phase changes.
-        </p>
-        <table>
-          <thead>
-            <tr>
-              <th>Phase</th>
-              <th>Recommended Pals</th>
-              <th>Reason</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Phase 1 (Dark)</td>
-              <td>Jetragon / Astegon</td>
-              <td>
-                Jetragon provides the highest Dragon DPS. Astegon (Dark/Dragon)
-                has the best natural resistance to her Dark beams.
-              </td>
-            </tr>
-            <tr>
-              <td>Phase 2 (Ice)</td>
-              <td>Jormuntide Ignis / Blazamut Ryu</td>
-              <td>
-                Jormuntide Ignis is the "MVP" because its Fire/Dragon typing
-                resists her attacks in both phases. Blazamut Ryu is the current
-                DPS king for Fire damage.
-              </td>
-            </tr>
-            <tr>
-              <td>All-Rounder</td>
-              <td>Selyne</td>
-              <td>
-                If you don't want to swap, Selyne is the most versatile
-                post-v0.7 Pal for raids due to its high burst magic damage.
-              </td>
-            </tr>
-          </tbody>
-        </table>
-
-        <h3>Optimal Passive Skills (2026 Meta)</h3>
-        <p>
-          For your Base Pals, move away from old skills like Ferocious. You want
-          the "Big Four" for maximum boss DPS:
-        </p>
-        <ul>
-          <li>
-            <strong>Legend:</strong> (Atk +20%, Def +20%, Move Speed +15%)
-          </li>
-          <li>
-            <strong>Demon God:</strong> (Atk +30%, Def +5%) — Superior to
-            Ferocious; found on raid-tier Pals.
-          </li>
-          <li>
-            <strong>Musclehead:</strong> (Atk +30%) — Essential raw damage.
-          </li>
-          <li>
-            <strong>Serenity:</strong> (Atk +10%, Cooldown -30%) — Crucial. This
-            allows your Pals to spam high-damage moves like Holy Burst or Dragon
-            Meteor much more frequently.
-          </li>
-        </ul>
-
-        <h2>Pro Strategy: The "Three Pillars" of Success</h2>
-        <ol>
-          <li>
-            <strong>The Food Buff:</strong> Feed your base Pals Mozzarina
-            Cheeseburgers before summoning. It grants a 20% attack boost and,
-            more importantly, keeps their hunger from dropping, which prevents a
-            20% stat penalty mid-fight.
-          </li>
-          <li>
-            <strong>Skill Selection:</strong> Ensure your Pals have at least one
-            low-cooldown move (2–4 seconds). If they only have
-            high-power/high-cooldown moves, they will stand idle for 10 seconds
-            after one attack, losing massive DPS.
-          </li>
-          <li>
-            <strong>Base Safety:</strong> Build your Summoning Altar on a raised
-            stone platform or in a base with no critical infrastructure.
-            Bellanoir's "Nightmare Ray" will delete chests and crafting stations
-            instantly.
-          </li>
-        </ol>
+      <div class="tab-container-nested">
+        <button class="tab-button-nested active" data-tab-nested="bellanoir">Bellanoir</button>
+        <button class="tab-button-nested" data-tab-nested="bellanoir-libero">Bellanoir Libero</button>
+        <button class="tab-button-nested" data-tab-nested="blazamut">Blazamut</button>
+        <button class="tab-button-nested" data-tab-nested="blazamut-ryu">Blazamut Ryu</button>
       </div>
+
+      <div id="bellanoir" class="tab-content-nested active">
+        <div class="info-content">
+          <p>
+            To defeat <strong>Bellanoir Libero Ultra</strong> in the 2026 meta
+            (v0.7 and beyond), you need to account for her massive HP pool (around
+            1.2 million) and her unique two-phase typing.
+          </p>
+          <p>
+            She starts as <strong>Dark</strong> type but transforms into
+            <strong>Ice</strong> type when she reaches her final HP threshold
+            (roughly the last 15–20%). This makes standard Dragon teams dangerous
+            because she will shred them in the final phase.
+          </p>
+
+          <h2>The "Ultra" Team Composition</h2>
+          <p>
+            Since raid bosses now target the player more aggressively, your party
+            should be built around
+            <strong>Player Damage Enhancement</strong> while your base Pals
+            provide the heavy lifting.
+          </p>
+
+          <h3>1. The Party (Your Personal Loadout)</h3>
+          <ul>
+            <li>
+              <strong>Mount 1 (Phase 1):</strong> Chillet / Chillet Ignis. Riding
+              Chillet converts your player damage to Dragon, which is super
+              effective against her Dark phase.
+            </li>
+            <li>
+              <strong>Mount 2 (Phase 2):</strong> Ragnahawk / Pyrin. When she
+              turns to Ice, switch to these to convert your damage to Fire.
+            </li>
+            <li>
+              <strong>Support:</strong> 4x Gobfin (fully condensed). Their "Angry
+              Shark" skill stacks, giving you a massive boost to your own attack
+              power.
+            </li>
+            <li>
+              <strong>Passives for Party:</strong> Aim for Vanguard and Stronghold
+              Strategist on every Gobfin and mount to buff your own stats.
+            </li>
+          </ul>
+
+          <h3>2. The Base Army (The 15–20 Pals at your Altar)</h3>
+          <p>
+            You need two distinct groups. Use the Palbox to swap them quickly when
+            the phase changes.
+          </p>
+          <table>
+            <thead>
+              <tr>
+                <th>Phase</th>
+                <th>Recommended Pals</th>
+                <th>Reason</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Phase 1 (Dark)</td>
+                <td>Jetragon / Astegon</td>
+                <td>
+                  Jetragon provides the highest Dragon DPS. Astegon (Dark/Dragon)
+                  has the best natural resistance to her Dark beams.
+                </td>
+              </tr>
+              <tr>
+                <td>Phase 2 (Ice)</td>
+                <td>Jormuntide Ignis / Blazamut Ryu</td>
+                <td>
+                  Jormuntide Ignis is the "MVP" because its Fire/Dragon typing
+                  resists her attacks in both phases. Blazamut Ryu is the current
+                  DPS king for Fire damage.
+                </td>
+              </tr>
+              <tr>
+                <td>All-Rounder</td>
+                <td>Selyne</td>
+                <td>
+                  If you don't want to swap, Selyne is the most versatile
+                  post-v0.7 Pal for raids due to its high burst magic damage.
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
+          <h3>Optimal Passive Skills (2026 Meta)</h3>
+          <p>
+            For your Base Pals, move away from old skills like Ferocious. You want
+            the "Big Four" for maximum boss DPS:
+          </p>
+          <ul>
+            <li>
+              <strong>Legend:</strong> (Atk +20%, Def +20%, Move Speed +15%)
+            </li>
+            <li>
+              <strong>Demon God:</strong> (Atk +30%, Def +5%) — Superior to
+              Ferocious; found on raid-tier Pals.
+            </li>
+            <li>
+              <strong>Musclehead:</strong> (Atk +30%) — Essential raw damage.
+            </li>
+            <li>
+              <strong>Serenity:</strong> (Atk +10%, Cooldown -30%) — Crucial. This
+              allows your Pals to spam high-damage moves like Holy Burst or Dragon
+              Meteor much more frequently.
+            </li>
+          </ul>
+
+          <h2>Pro Strategy: The "Three Pillars" of Success</h2>
+          <ol>
+            <li>
+              <strong>The Food Buff:</strong> Feed your base Pals Mozzarina
+              Cheeseburgers before summoning. It grants a 20% attack boost and,
+              more importantly, keeps their hunger from dropping, which prevents a
+              20% stat penalty mid-fight.
+            </li>
+            <li>
+              <strong>Skill Selection:</strong> Ensure your Pals have at least one
+              low-cooldown move (2–4 seconds). If they only have
+              high-power/high-cooldown moves, they will stand idle for 10 seconds
+              after one attack, losing massive DPS.
+            </li>
+            <li>
+              <strong>Base Safety:</strong> Build your Summoning Altar on a raised
+              stone platform or in a base with no critical infrastructure.
+              Bellanoir's "Nightmare Ray" will delete chests and crafting stations
+              instantly.
+            </li>
+          </ol>
+        </div>
+      </div>
+      <div id="bellanoir-libero" class="tab-content-nested"></div>
+      <div id="blazamut" class="tab-content-nested"></div>
+      <div id="blazamut-ryu" class="tab-content-nested"></div>
     </section>
 
     <script src="app.js"></script>
