refactor: move content to Bellanoir Libero Ultra tab

--- a/app.html
+++ b/app.html
@@ -240,13 +240,14 @@
       <h1>Ultra Teams Guide (2026 Meta)</h1>
 
       <div class="tab-container-nested">
-        <button class="tab-button-nested active" data-tab-nested="bellanoir">Bellanoir</button>
-        <button class="tab-button-nested" data-tab-nested="bellanoir-libero">Bellanoir Libero</button>
+        <button class="tab-button-nested" data-tab-nested="bellanoir">Bellanoir</button>
+        <button class="tab-button-nested active" data-tab-nested="bellanoir-libero">Bellanoir Libero Ultra</button>
         <button class="tab-button-nested" data-tab-nested="blazamut">Blazamut</button>
         <button class="tab-button-nested" data-tab-nested="blazamut-ryu">Blazamut Ryu</button>
       </div>
 
-      <div id="bellanoir" class="tab-content-nested active">
+      <div id="bellanoir" class="tab-content-nested"></div>
+      <div id="bellanoir-libero" class="tab-content-nested active">
         <div class="info-content">
           <p>
             To defeat <strong>Bellanoir Libero Ultra</strong> in the 2026 meta
@@ -292,7 +293,7 @@
 
           <h3>2. The Base Army (The 15–20 Pals at your Altar)</h3>
           <p>
-            You need two distinct groups. Use the Palbox to swap them quickly when
+            You need to a distinct groups. Use the Palbox to swap them quickly when
             the phase changes.
           </p>
           <table>
@@ -378,7 +379,6 @@
           </ol>
         </div>
       </div>
-      <div id="bellanoir-libero" class="tab-content-nested"></div>
       <div id="blazamut" class="tab-content-nested"></div>
       <div id="blazamut-ryu" class="tab-content-nested"></div>
     </section>
