feat: add all bosses to ultra teams page

--- a/app.html
+++ b/app.html
@@ -240,14 +240,22 @@
       <h1>Ultra Teams Guide (2026 Meta)</h1>
 
       <div class="tab-container-nested">
-        <button class="tab-button-nested" data-tab-nested="bellanoir">Bellanoir</button>
-        <button class="tab-button-nested active" data-tab-nested="bellanoir-libero">Bellanoir Libero Ultra</button>
-        <button class="tab-button-nested" data-tab-nested="blazamut">Blazamut</button>
-        <button class="tab-button-nested" data-tab-nested="blazamut-ryu">Blazamut Ryu</button>
+        <button class="tab-button-nested" data-tab-nested="eclipsed-siren-bellanoir">Eclipsed Siren Bellanoir</button>
+        <button class="tab-button-nested" data-tab-nested="twilight-siren-bellanoir-libero">Twilight Siren Bellanoir Libero</button>
+        <button class="tab-button-nested active" data-tab-nested="twilight-siren-ultra-bellanoir-libero">Twilight Siren (Ultra) Bellanoir Libero</button>
+        <button class="tab-button-nested" data-tab-nested="incarnation-of-the-eternal-flame-blazamut-ryu">Incarnation of the Eternal Flame Blazamut Ryu</button>
+        <button class="tab-button-nested" data-tab-nested="incarnation-of-the-eternal-flame-ultra-blazamut-ryu">Incarnation of the Eternal Flame (Ultra) Blazamut Ryu</button>
+        <button class="tab-button-nested" data-tab-nested="invader-from-space-xenolord">Invader from Space Xenolord</button>
+        <button class="tab-button-nested" data-tab-nested="invader-from-space-ultra-xenolord">Invader from Space (Ultra) Xenolord</button>
+        <button class="tab-button-nested" data-tab-nested="moon-lord">Moon Lord</button>
+        <button class="tab-button-nested" data-tab-nested="master-moon-lord">[Master] Moon Lord</button>
+        <button class="tab-button-nested" data-tab-nested="king-of-salvation-hartalis">King of Salvation Hartalis</button>
+        <button class="tab-button-nested" data-tab-nested="king-of-salvation-ultra-hartalis">King of Salvation (Ultra) Hartalis</button>
       </div>
 
-      <div id="bellanoir" class="tab-content-nested"></div>
-      <div id="bellanoir-libero" class="tab-content-nested active">
+      <div id="eclipsed-siren-bellanoir" class="tab-content-nested"></div>
+      <div id="twilight-siren-bellanoir-libero" class="tab-content-nested"></div>
+      <div id="twilight-siren-ultra-bellanoir-libero" class="tab-content-nested active">
         <div class="info-content">
           <p>
             To defeat <strong>Bellanoir Libero Ultra</strong> in the 2026 meta
@@ -378,9 +386,16 @@
             </li>
           </ol>
         </div>
+        </div>
+        <div id="incarnation-of-the-eternal-flame-blazamut-ryu" class="tab-content-nested"></div>
+        <div id="incarnation-of-the-eternal-flame-ultra-blazamut-ryu" class="tab-content-nested"></div>
+        <div id="invader-from-space-xenolord" class="tab-content-nested"></div>
+        <div id="invader-from-space-ultra-xenolord" class="tab-content-nested"></div>
+        <div id="moon-lord" class="tab-content-nested"></div>
+        <div id="master-moon-lord" class="tab-content-nested"></div>
+        <div id="king-of-salvation-hartalis" class="tab-content-nested"></div>
+        <div id="king-of-salvation-ultra-hartalis" class="tab-content-nested"></div>
       </div>
-      <div id="blazamut" class="tab-content-nested"></div>
-      <div id="blazamut-ryu" class="tab-content-nested"></div>
     </section>
 
     <script src="app.js"></script>
