feat: add content for Bellanoir and Bellanoir Libero

--- a/app.html
+++ b/app.html
@@ -253,8 +253,102 @@
         <button class="tab-button-nested" data-tab-nested="king-of-salvation-ultra-hartalis">King of Salvation (Ultra) Hartalis</button>
       </div>
 
-      <div id="eclipsed-siren-bellanoir" class="tab-content-nested"></div>
-      <div id="twilight-siren-bellanoir-libero" class="tab-content-nested"></div>
+      <div id="eclipsed-siren-bellanoir" class="tab-content-nested">
+        <div class="info-content">
+          <h2>Bellanoir (Eclipsed Siren — Level 30)</h2>
+          <p>To defeat the standard Bellanoir, you need to account for her status as a "gateway" raid. She has roughly 294,000 HP and is a pure Dark type. Unlike her stronger versions, she does not have a second elemental phase.</p>
+          <h3>The "Standard" Team Composition</h3>
+          <p>Since she is strictly Dark-type, the strategy is straightforward: maximum Dragon damage.</p>
+          <h4>1. The Party (Your Personal Loadout)</h4>
+          <ul>
+            <li><strong>Mount:</strong> Chillet. Its partner skill, Wriggling Weasel, converts all your player damage to Dragon while riding. This is the most efficient way to lower her health personally.</li>
+            <li><strong>Support:</strong> 4x Gobfin. Even at low condensation, having four Gobfins in your party provides a significant passive boost to your attack power.</li>
+            <li><strong>Passives for Party:</strong> Look for Vanguard (+10% Player Attack) on your Chillet and Gobfins.</li>
+          </ul>
+          <h4>2. The Base Army (The 15–20 Pals at your Altar)</h4>
+          <table>
+            <thead>
+              <tr>
+                <th>Phase</th>
+                <th>Recommended Pals</th>
+                <th>Reason</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Full Fight</td>
+                <td>Quivern / Astegon</td>
+                <td>Quivern provides high Dragon DPS and is easy to obtain early. Astegon is even better because its Dark/Dragon typing makes it resistant to Bellanoir’s Dark beams.</td>
+              </tr>
+              <tr>
+                <td>Early Game</td>
+                <td>Relaxaurus</td>
+                <td>If you haven't reached the desert/volcano, a team of high-level Relaxaurus with Dragon moves can brute-force the win.</td>
+              </tr>
+            </tbody>
+          </table>
+          <h4>Optimal Passive Skills</h4>
+          <ul>
+            <li><strong>Musclehead:</strong> (+30% Atk) — The best common skill for raw power.</li>
+            <li><strong>Ferocious:</strong> (+20% Atk) — Reliable damage boost.</li>
+            <li><strong>Burly Body:</strong> (+20% Def) — Important for keeping your base Pals alive during her high-power "Nightmare Beam" attacks.</li>
+          </ul>
+        </div>
+      </div>
+      <div id="twilight-siren-bellanoir-libero" class="tab-content-nested">
+        <div class="info-content">
+          <h2>Bellanoir Libero (Twilight Siren — Level 50)</h2>
+          <p>To defeat the standard Bellanoir Libero, you must prepare for a significant difficulty spike. She has approximately 450,000 HP and features the infamous two-phase typing. She begins as Dark and shifts to Ice for the final 20% of the fight.</p>
+          <h3>The "Libero" Team Composition</h3>
+          <p>You must be ready to switch your elemental focus mid-fight or your Dragon army will be wiped instantly during the Ice phase.</p>
+          <h4>1. The Party (Your Personal Loadout)</h4>
+          <ul>
+            <li><strong>Mount 1 (Phase 1):</strong> Chillet. Use this for the first 80% of the fight to deal Dragon damage.</li>
+            <li><strong>Mount 2 (Phase 2):</strong> Ragnahawk. Once she turns blue/white (Ice phase), switch to Ragnahawk to convert your damage to Fire.</li>
+            <li><strong>Support:</strong> 4x Gobfin (Condensed). High-star Gobfins are almost mandatory here to ensure you have the DPS to finish the fight before the timer expires.</li>
+            <li><strong>Weapon:</strong> Assault Rifle or the Pump-Action Shotgun (Legendary schematic if possible).</li>
+          </ul>
+          <h4>2. The Base Army (The 15–20 Pals at your Altar)</h4>
+          <table>
+            <thead>
+              <tr>
+                <th>Phase</th>
+                <th>Recommended Pals</th>
+                <th>Reason</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Phase 1 (Dark)</td>
+                <td>Jetragon / Astegon</td>
+                <td>Jetragon is the highest DPS option. Astegon is the "Tank" option due to its Dark resistance.</td>
+              </tr>
+              <tr>
+                <td>Phase 2 (Ice)</td>
+                <td>Jormuntide Ignis</td>
+                <td>He is Fire/Dragon. He resists her Ice attacks and deals massive Fire damage in return.</td>
+              </tr>
+              <tr>
+                <td>All-Rounder</td>
+                <td>Blazamut Ryu</td>
+                <td>If you have already beaten the Ryu raid, its hybrid stats allow it to stay in the fight for both phases effectively.</td>
+              </tr>
+            </tbody>
+          </table>
+          <h4>Optimal Passive Skills (2026 Meta)</h4>
+          <ul>
+            <li><strong>Legend:</strong> (+20% Atk, +20% Def, +15% Speed) — Standard for endgame Pals.</li>
+            <li><strong>Musclehead:</strong> (+30% Atk) — Essential for the damage race.</li>
+            <li><strong>Serenity:</strong> (+10% Atk, -30% Cooldown) — This is the MVP skill for Libero. It allows your Pals to cast Dragon Meteor or Fire Ball significantly more often.</li>
+            <li><strong>Demon God:</strong> (+30% Atk, +5% Def) — If you have access to raid-exclusive breeding, this replaces Ferocious.</li>
+          </ul>
+          <h3>Pro Strategy: The "Food Buff" Secret</h3>
+          <ul>
+            <li><strong>Manual Feeding:</strong> Don't rely on the feed box during the raid. Manually feed every Pal in your base Mozzarina Cheeseburgers (Atk +20%) right before you summon her. This ensures the buff lasts the entire duration of the fight.</li>
+            <li><strong>Skill Fruit Tip:</strong> Give your Fire Pals at least one low-cooldown move (like Ignis Blast). This prevents them from "standing still" while waiting for high-power moves to recharge.</li>
+          </ul>
+        </div>
+      </div>
       <div id="twilight-siren-ultra-bellanoir-libero" class="tab-content-nested active">
         <div class="info-content">
           <p>
